Grouped by field on categories
Update tranlated texts


Former-commit-id: 7de75b432b719c8cb563e9b9986c86f5cd4928c7

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -1236,32 +1236,72 @@ migas.ver.observatorio                                   = Detalles
 migas.ver.rastreo                                        = Ver Rastreo
 migas.ver.usuario                                        = Ver Usuario
 
+minhap.observatory.2_0.subgroup.1.1.1 = 1.1.1 Existencia de alternativas textuales
+minhap.observatory.2_0.subgroup.1.1.2 = 1.1.2 Uso de encabezados
+minhap.observatory.2_0.subgroup.1.1.3 = 1.1.3 Uso de listas
+minhap.observatory.2_0.subgroup.1.1.4 = 1.1.4 Tablas de datos
+minhap.observatory.2_0.subgroup.1.1.5 = 1.1.5 Agrupaci\u00F3n estructural
+minhap.observatory.2_0.subgroup.1.1.6 = 1.1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
+minhap.observatory.2_0.subgroup.1.1.7 = 1.1.7 Identificaci\u00F3n del idioma principal
+minhap.observatory.2_0.subgroup.1.2.1 = 1.2.1 Identificaci\u00F3n de los cambios de idioma
+minhap.observatory.2_0.subgroup.1.2.2 = 1.2.2 Contraste suficiente
+minhap.observatory.2_0.subgroup.1.2.3 = 1.2.3 Secci\u00F3n de accesibilidad
+minhap.observatory.2_0.subgroup.2.1.1 = 2.1.1 Navegaci\u00F3n con javascript accesible
+minhap.observatory.2_0.subgroup.2.1.2 = 2.1.2 Control de usuario
+minhap.observatory.2_0.subgroup.2.1.3 = 2.1.3 Formularios
+minhap.observatory.2_0.subgroup.2.1.4 = 2.1.4 T\u00EDtulo de p\u00E1gina y de marcos
+minhap.observatory.2_0.subgroup.2.1.5 = 2.1.5 Enlaces descriptivos
+minhap.observatory.2_0.subgroup.2.1.6 = 2.1.6 Cambios de contexto
+minhap.observatory.2_0.subgroup.2.1.7 = 2.1.7 Compatibilidad
+minhap.observatory.2_0.subgroup.2.2.1 = 2.2.1 M\u00FAltiples v\u00EDas de navegaci\u00F3n
+minhap.observatory.2_0.subgroup.2.2.2 = 2.2.2 Foco del teclado
+minhap.observatory.2_0.subgroup.2.2.3 = 2.2.3 Navegaci\u00F3n consistente
+minhap.observatory.3_0.subgroup.1.1   = 1.1 Existencia de alternativas textuales
+minhap.observatory.3_0.subgroup.1.10  = 1.10 Formularios
+minhap.observatory.3_0.subgroup.1.11  = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
+minhap.observatory.3_0.subgroup.1.12  = 1.12 Enlaces descriptivos
+minhap.observatory.3_0.subgroup.1.13  = 1.13 Cambios de contexto
+minhap.observatory.3_0.subgroup.1.14  = 1.14 Compatibilidad
+minhap.observatory.3_0.subgroup.1.2   = 1.2 Uso de encabezados
+minhap.observatory.3_0.subgroup.1.3   = 1.3 Uso de listas
+minhap.observatory.3_0.subgroup.1.4   = 1.4 Tablas de datos
+minhap.observatory.3_0.subgroup.1.5   = 1.5 Agrupaci\u00F3n estructural
+minhap.observatory.3_0.subgroup.1.6   = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
+minhap.observatory.3_0.subgroup.1.7   = 1.7 Identificaci\u00F3n del idioma principal
+minhap.observatory.3_0.subgroup.1.8   = 1.8 Navegaci\u00F3n con javascript accesible
+minhap.observatory.3_0.subgroup.1.9   = 1.9 Control de usuario
+minhap.observatory.3_0.subgroup.2.1   = 2.1 Identificaci\u00F3n de los cambios de idioma
+minhap.observatory.3_0.subgroup.2.2   = 2.2 Contraste suficiente
+minhap.observatory.3_0.subgroup.2.3   = 2.3 Secci\u00F3n de accesibilidad
+minhap.observatory.3_0.subgroup.2.4   = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
+minhap.observatory.3_0.subgroup.2.5   = 2.5 Foco del teclado
+minhap.observatory.3_0.subgroup.2.6   = 2.6 Navegaci\u00F3n consistente
 # PAUTAS OBSERVATORIO UNE 2012
-minhap.observatory.5_0.subgroup.1.1  = 1.1 Existencia de alternativas textuales
-minhap.observatory.5_0.subgroup.1.10 = 1.10 Formularios y estructura
-minhap.observatory.5_0.subgroup.1.11 = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
-minhap.observatory.5_0.subgroup.1.12 = 1.12 Enlaces descriptivos
-minhap.observatory.5_0.subgroup.1.13 = 1.13 Cambios de contexto
-minhap.observatory.5_0.subgroup.1.14 = 1.14 Compatibilidad
-minhap.observatory.5_0.subgroup.1.2  = 1.2 Uso de encabezados
-minhap.observatory.5_0.subgroup.1.3  = 1.3 Uso de listas
-minhap.observatory.5_0.subgroup.1.4  = 1.4 Tablas de datos
-minhap.observatory.5_0.subgroup.1.5  = 1.5 Agrupaci\u00F3n estructural
-minhap.observatory.5_0.subgroup.1.6  = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
-minhap.observatory.5_0.subgroup.1.7  = 1.7 Identificaci\u00F3n del idioma principal
-minhap.observatory.5_0.subgroup.1.8  = 1.8 Navegaci\u00F3n con javascript accesible y control de usuario
-minhap.observatory.5_0.subgroup.1.9  = 1.9 Formularios y etiquetas
-minhap.observatory.5_0.subgroup.2.1  = 2.1 Identificaci\u00F3n de los cambios de idioma
-minhap.observatory.5_0.subgroup.2.2  = 2.2 Legibilidad y contraste
-minhap.observatory.5_0.subgroup.2.3  = 2.3 Maquetaci\u00F3n adaptable
-minhap.observatory.5_0.subgroup.2.4  = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
-minhap.observatory.5_0.subgroup.2.5  = 2.5 Independencia del dispositivo
-minhap.observatory.5_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
-minhap.observatory.5_0.subgroup.3.1  = 1 Presencia de la declaraci\u00F3n de accesibilidad
-minhap.observatory.5_0.subgroup.3.2  = 2 Situaci\u00F3n de cumplimiento y contenido no accesible
-minhap.observatory.5_0.subgroup.3.3  = 3 Comunicaciones sobre requisitos de accesibilidad
-minhap.observatory.5_0.subgroup.3.4  = 4 Preparaci\u00F3n de la declaraci\u00F3n de accesibilidad
-minhap.observatory.5_0.subgroup.3.5  = 5 Procedimiento de aplicaci\u00F3n
+minhap.observatory.5_0.subgroup.1.1   = 1.1 Existencia de alternativas textuales
+minhap.observatory.5_0.subgroup.1.10  = 1.10 Formularios y estructura
+minhap.observatory.5_0.subgroup.1.11  = 1.11 T\u00EDtulo de p\u00E1gina y de marcos
+minhap.observatory.5_0.subgroup.1.12  = 1.12 Enlaces descriptivos
+minhap.observatory.5_0.subgroup.1.13  = 1.13 Cambios de contexto
+minhap.observatory.5_0.subgroup.1.14  = 1.14 Compatibilidad
+minhap.observatory.5_0.subgroup.1.2   = 1.2 Uso de encabezados
+minhap.observatory.5_0.subgroup.1.3   = 1.3 Uso de listas
+minhap.observatory.5_0.subgroup.1.4   = 1.4 Tablas de datos
+minhap.observatory.5_0.subgroup.1.5   = 1.5 Agrupaci\u00F3n estructural
+minhap.observatory.5_0.subgroup.1.6   = 1.6 Separaci\u00F3n de contenido y presentaci\u00F3n
+minhap.observatory.5_0.subgroup.1.7   = 1.7 Identificaci\u00F3n del idioma principal
+minhap.observatory.5_0.subgroup.1.8   = 1.8 Navegaci\u00F3n con javascript accesible y control de usuario
+minhap.observatory.5_0.subgroup.1.9   = 1.9 Formularios y etiquetas
+minhap.observatory.5_0.subgroup.2.1   = 2.1 Identificaci\u00F3n de los cambios de idioma
+minhap.observatory.5_0.subgroup.2.2   = 2.2 Legibilidad y contraste
+minhap.observatory.5_0.subgroup.2.3   = 2.3 Maquetaci\u00F3n adaptable
+minhap.observatory.5_0.subgroup.2.4   = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
+minhap.observatory.5_0.subgroup.2.5   = 2.5 Independencia del dispositivo
+minhap.observatory.5_0.subgroup.2.6   = 2.6 Navegaci\u00F3n consistente
+minhap.observatory.5_0.subgroup.3.1   = 1 Presencia de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.2   = 2 Situaci\u00F3n de cumplimiento y contenido no accesible
+minhap.observatory.5_0.subgroup.3.3   = 3 Comunicaciones sobre requisitos de accesibilidad
+minhap.observatory.5_0.subgroup.3.4   = 4 Preparaci\u00F3n de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.5   = 5 Procedimiento de aplicaci\u00F3n
 
 ministerio.logo.alt = MINHAFP - Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 
@@ -1269,6 +1309,7 @@ modality.fail = Falla
 modality.pass = Pasa
 
 modificar.categoria                                = Modificar Segmento
+modificar.categoria.clave                          = Agrupado por:
 modificar.categoria.editar.termino.categoria.alt   = Editar T\u00E9rmino Categor\u00EDa
 modificar.categoria.eliminar.termino.categoria.alt = Eliminar T\u00E9rmino Categor\u00EDa
 modificar.categoria.nombre                         = Nombre:
@@ -1446,6 +1487,7 @@ nueva.semilla.observatorio.eliminada       = Eliminada
 nueva.semilla.observatorio.etiqueta        = Etiqueta
 nueva.semilla.observatorio.in.directory    = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre          = Nombre Semilla
+nueva.semilla.observatorio.observaciones   = Observaciones
 nueva.semilla.observatorio.url             = URL
 #Informaci\u00F3nNueva Semilla
 nueva.semilla.webs                         = Nueva Semilla
@@ -2437,6 +2479,8 @@ observatorio.puntuacion.nivel.1                                     = Puntuaci\u
 observatorio.puntuacion.nivel.2                                     = Puntuaci\u00F3n Media AA
 observatorio.puntuacion.nivel.a                                     = Puntuaci\u00F3n nivel de adecuaci\u00F3n A
 observatorio.puntuacion.nivel.aa                                    = Puntuaci\u00F3n nivel de adecuaci\u00F3n AA
+observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media Prioridad 1
+observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n Media Prioridad 2
 observatorio.puntuacion.resultados.globales                         = Resultados globales
 observatorio.puntuacion.resultados.resumen                          = Resumen de resultados
 observatorio.puntuacion.total                                       = Puntuaci\u00F3n media del portal (PMP)
@@ -2494,7 +2538,7 @@ observatory.graphic.evolution.mid.puntuation.title.general                    = 
 observatory.graphic.evolution.verification.mid.puntuation                     = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = EvolucionPuntuacionMediaVerificacionV{0}
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
-observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Puntuaci\u00F3n media de los sitios web por complejidad y nivel de adecuaci\u00F3n\n
+observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Puntuaci\u00F3n media de los sitios web por complejidad y nivel de adecuaci\u00F3n
 observatory.graphic.global.puntuation.allocation.complexity.mark.name         = ComparacionAdecuacionComplejidad
 observatory.graphic.global.puntuation.allocation.complexity.mark.title        = Nivel de adecuaci\u00F3n estimado por complejidad
 observatory.graphic.global.puntuation.allocation.segment.strached.name        = ComparacionPuntuacionSegmento
@@ -2715,6 +2759,7 @@ pdf.accessibility.intro.next.basic.service.p1                  = Con el objetivo
 pdf.accessibility.intro.next.list.1                            = {0} indicados en este informe en el apartado Incidencias de cada p\u00E1gina. Dicho apartado contiene un resumen de las incidencias detectadas.  Para conocer dichos errores en detalle, as\u00ED como posibles soluciones, deber\u00E1 ayudarse del servicio de diagn\u00F3stico en l\u00EDnea del Observatorio, al que se accede a trav\u00E9s de la [anchor1]. Se podr\u00E1n solicitar tantos informes de accesibilidad web como se necesiten y para todas las p\u00E1ginas que se deseen analizar del sitio web.
 pdf.accessibility.intro.next.list.1.anchor1.text               = comunidad de accesibilidad
 pdf.accessibility.intro.next.list.1.anchor1.url                = http://administracionelectronica.gob.es/comunidades/accesibilidad
+pdf.accessibility.intro.next.list.1.bold                       = Corregir los errores de accesibilidad\u0009\u0009\u0009\u0009
 pdf.accessibility.intro.next.list.1.bold1                      = Corregir los errores de accesibilidad 
 pdf.accessibility.intro.next.list.2                            = Una vez realizados todos los cambios y cuando considere que se ha llegado a la situaci\u00F3n \u00F3ptima, se recomienda {0} utilizando la opci\u00F3n de selecci\u00F3n aleatoria de p\u00E1ginas para el n\u00FAmero m\u00E1ximo de p\u00E1ginas permitidas. De esta manera, se conseguir\u00EDa un informe de accesibilidad similar al obtenido por el Observatorio de Accesibilidad Web si, en ese momento, ejecutara una iteraci\u00F3n oficial del seguimiento simplificado.
 pdf.accessibility.intro.next.list.2.bold                       = solicitar nuevamente un informe al servicio de diagn\u00F3stico
@@ -2756,6 +2801,7 @@ pdf.accessibility.intro.p4.anchor2.text                        = UNE-EN 301549:2
 pdf.accessibility.intro.p4.anchor2.url                         = http://administracionelectronica.gob.es/PAe/accesibilidad/une-en-301549-2019.pdf
 pdf.accessibility.intro.p4.anchor3.text                        = EN 301 549 V2.1.2 (2018-08) Requisitos de accesibilidad para los productos y servicios de las TIC
 pdf.accessibility.intro.p4.anchor3.url                         = https://www.etsi.org/deliver/etsi_en/301500_301599/301549/02.01.02_60/en_301549v020102p.pdf
+pdf.accessibility.intro.p4.bold                                = esto permite estimar el grado de cumplimiento en t\u00E9rminos de accesibilidad de su sitio web.\u0009\u0009\u0009\u0009
 pdf.accessibility.intro.p5                                     = En este documento, recibe la revisi\u00F3n realizada por el Observatorio de Accesibilidad Web en el marco del seguimiento simplificado {0}
 pdf.accessibility.intro.p5.bold                                = que permite realizar una estimaci\u00F3n del grado de cumplimiento en materia de accesibilidad de su sitio web. 
 pdf.accessibility.intro.p5.bold.sd                             = Servicio de Diagn\u00F3stico en l\u00EDnea
@@ -3384,6 +3430,8 @@ une2012.resAnon.intav.report.342.p1                   = Para obtener de forma cl
 une2012.resAnon.intav.report.342.p2                   = Para facilitar la comprensi\u00F3n de esta valoraci\u00F3n, se dividen las 20 verificaciones en dos grupos de 14 y 6 verificaciones cada uno:
 une2012.resAnon.intav.report.342.p3                   = A(14 verificaciones)
 une2012.resAnon.intav.report.342.p4                   = AA (6 verificaciones)
+une2012.resAnon.intav.report.342.p5                   = Nivel II, Prioridad 1 (7 verificaciones)
+une2012.resAnon.intav.report.342.p6                   = Nivel II, Prioridad 2 (3 verificaciones)
 une2012.resAnon.intav.report.chapter331.title         = Correspondencia metodolog\u00EDa con UNE 139803:2012 y WCAG 2.0
 
 une2012_b.resAnon.intav.report.33.table.1.1.answer    = No hay elementos no textuales;S\u00ED;No
