Fix agreagte report
Improve export/import


Former-commit-id: 1150b0760b0188bb815b49e0684405cbea4b33d2

--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -2564,7 +2564,7 @@ pdf.accessibility.global.summary.p2                     = La {0} refleja la cant
 pdf.accessibility.global.summary.p2.bold                = puntuaci\u00F3n media del sitio web
 pdf.accessibility.global.summary.p3                     = El {0} del sitio web (Sin declaraci\u00F3n, No v\u00E1lido, Parcial y Completa) est\u00E1 relacionado con el nivel de cumplimiento de las verificaciones que se satisfacen.
 pdf.accessibility.global.summary.p3.bold                = nivel de cumplimiento estimado
-pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Totalmente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
+pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Plenamente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
 pdf.accessibility.global.summary.p4.bold                = situaci\u00F3n de cumplimiento estimada
 pdf.accessibility.global.summary.p5                     = Tambi\u00E9n se indica a modo de {0} la posici\u00F3n del sitio web a nivel global de todo el Observatorio, a nivel del segmento al que perteneces y a nivel del grupo Complejidad en el que est\u00E1 enmarcado.
 pdf.accessibility.global.summary.p5.bold                = ranking
@@ -2796,7 +2796,7 @@ resultados.anonimos.porc.portales.nc                             = No conforme
 resultados.anonimos.porc.portales.nv                             = No V\u00E1lido
 resultados.anonimos.porc.portales.parcial                        = No V\u00E1lido
 resultados.anonimos.porc.portales.pc                             = Parcialmente conforme
-resultados.anonimos.porc.portales.tc                             = Totalmente conforme
+resultados.anonimos.porc.portales.tc                             = Plenamente conforme
 resultados.anonimos.porcentaje.terminos                          = Porcentaje de T\u00E9rminos
 resultados.anonimos.portal                                       = Portal
 resultados.anonimos.presentacion                                 = Presentaci\u00F3n
