--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,11 @@ trim_trailing_whitespace = false
 [*.sh]
 end_of_line = lf
 trim_trailing_whitespace = false
+
+[*.xml]
+indent_style = space
+indent_size = 4
+end_of_line = native
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = false
