Reduce the attack surface by upgrading a number of dependencies

--- a/oaw/pom.xml
+++ b/oaw/pom.xml
@@ -1,166 +1,167 @@
-<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified 
-	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later 
-	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing, 
-	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
-	either express or implied. See the License for the specific language governing permissions and more details. You should have 
+<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified
+	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later
+	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing,
+	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+	either express or implied. See the License for the specific language governing permissions and more details. You should have
 	received a copy of the EUPL1.2 license along with this program; if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>es.minhap.oaw</groupId>
-	<artifactId>oaw</artifactId>
-	<version>5.0.4</version>
-	<packaging>pom</packaging>
+    <groupId>es.minhap.oaw</groupId>
+    <artifactId>oaw</artifactId>
+    <version>5.0.4</version>
+    <packaging>pom</packaging>
 
-	<name>oaw</name>
+    <name>oaw</name>
 
-	<modules>
-		<module>../common</module>
-		<module>../intavcore</module>
-		<module>../crawler</module>
-		<module>../portal</module>
-	</modules>
+    <modules>
+        <module>../common</module>
+        <module>../intavcore</module>
+        <module>../crawler</module>
+        <module>../portal</module>
+    </modules>
 
-	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.7</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.graylog2</groupId>
-			<artifactId>gelfj</artifactId>
-			<version>1.1.16</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.1</version>
+        </dependency>
 
-	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.3.2</version>
-					<configuration>
-						<encoding>UTF-8</encoding>
-						<source>1.7</source>
-						<target>1.7</target>
-						<compilerArgument>-Xlint:all</compilerArgument>
-						<showWarnings>true</showWarnings>
-						<showDeprecation>true</showDeprecation>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.sonarsource.scanner.maven</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.4.0.905</version>
-				</plugin>
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.7.4.201502262128</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>prepare-agent</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>report</id>
-							<phase>prepare-package</phase>
-							<goals>
-								<goal>report</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graylog2</groupId>
+            <artifactId>gelfj</artifactId>
+            <version>1.1.16</version>
+        </dependency>
+    </dependencies>
 
-				<plugin>
-					<groupId>org.owasp</groupId>
-					<artifactId>dependency-check-maven</artifactId>
-					<version>3.3.2</version>
-					<executions>
-						<execution>
-							<goals>
-								<goal>check</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                        <compilerArgument>-Xlint:all</compilerArgument>
+                        <showWarnings>true</showWarnings>
+                        <showDeprecation>true</showDeprecation>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.4.0.905</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.4.201502262128</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>report</id>
+                            <phase>prepare-package</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
 
-	<profiles>
-		<profile>
-			<id>desarrollo-windows</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<profile.name>desarrollo</profile.name>
-				<deploy.path>C:/Userssergio.costales/Downloads/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
-				<files.path>/tmp/oaw/files</files.path>
-			</properties>
-		</profile>
+                <plugin>
+                    <groupId>org.owasp</groupId>
+                    <artifactId>dependency-check-maven</artifactId>
+                    <version>5.3.2</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
-		<profile>
-			<id>desarrollo</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<profile.name>desarrollo</profile.name>
-				<deploy.path>/home/alvaro/Development/Programs/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
-				<files.path>/tmp/oaw/files</files.path>
-			</properties>
-		</profile>
+    <profiles>
+        <profile>
+            <id>desarrollo-windows</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <profile.name>desarrollo</profile.name>
+                <deploy.path>C:/Userssergio.costales/Downloads/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
+                <files.path>/tmp/oaw/files</files.path>
+            </properties>
+        </profile>
 
-		<profile>
-			<id>desarrollo2</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<profile.name>desarrollo2</profile.name>
-				<deploy.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tomcat/webapps/oaw</deploy.path>
-				<files.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tmp/oaw/files</files.path>
-			</properties>
-		</profile>
+        <profile>
+            <id>desarrollo</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <profile.name>desarrollo</profile.name>
+                <deploy.path>/home/alvaro/Development/Programs/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
+                <files.path>/tmp/oaw/files</files.path>
+            </properties>
+        </profile>
 
-		<profile>
-			<id>integracion</id>
-			<properties>
-				<profile.name>integracion</profile.name>
-				<deploy.path>/opt/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
-				<files.path>/tmp/oaw/files</files.path>
-			</properties>
-		</profile>
-		<profile>
-			<id>docker</id>
-			<properties>
-				<profile.name>docker</profile.name>
-				<deploy.path>/usr/local/tomcat/webapps/oaw</deploy.path>
-				<files.path>/tmp/oaw/files</files.path>
-			</properties>
-		</profile>
-	</profiles>
+        <profile>
+            <id>desarrollo2</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <profile.name>desarrollo2</profile.name>
+                <deploy.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tomcat/webapps/oaw</deploy.path>
+                <files.path>/media/alvaro/01D4C9B8E7267650/oaw/databasepro_27022020/tmp/oaw/files</files.path>
+            </properties>
+        </profile>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.21.0</version>
-			</plugin>
-		</plugins>
-	</reporting>
+        <profile>
+            <id>integracion</id>
+            <properties>
+                <profile.name>integracion</profile.name>
+                <deploy.path>/opt/apache-tomcat-7.0.54/webapps/oaw</deploy.path>
+                <files.path>/tmp/oaw/files</files.path>
+            </properties>
+        </profile>
+        <profile>
+            <id>docker</id>
+            <properties>
+                <profile.name>docker</profile.name>
+                <deploy.path>/usr/local/tomcat/webapps/oaw</deploy.path>
+                <files.path>/tmp/oaw/files</files.path>
+            </properties>
+        </profile>
+    </profiles>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.21.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
