--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,17 +1,16 @@
 <!--
-Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
+Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública,
 This program is licensed and may be used, modified and redistributed under the terms
-of the European Public License (EUPL), either version 1.2 or (at your option) any later 
+of the European Public License (EUPL), either version 1.2 or (at your option) any later
 version as soon as they are approved by the European Commission.
-Unless required by applicable law or agreed to in writing, software distributed under the 
-License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
-ANY KIND, either express or implied. See the License for the specific language governing 
+Unless required by applicable law or agreed to in writing, software distributed under the
+License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
+ANY KIND, either express or implied. See the License for the specific language governing
 permissions and more details.
-You should have received a copy of the EUPL1.2 license along with this program; if not, 
+You should have received a copy of the EUPL1.2 license along with this program; if not,
 you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>intav-common</artifactId>
@@ -32,7 +31,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.4.201502262128</version><!--$NO-MVN-MAN-VER$-->
+                <version>0.7.4.201502262128</version> <!--$NO-MVN-MAN-VER$-->
                 <executions>
                     <execution>
                         <goals>
@@ -60,7 +59,7 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
-            <version>1.3.3</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -68,5 +67,5 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
             <version>1.3</version>
         </dependency>
     </dependencies>
-    
+
 </project>
