--- a/crawler/pom.xml
+++ b/crawler/pom.xml
@@ -1,20 +1,19 @@
 <!--
-Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
+Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública,
 This program is licensed and may be used, modified and redistributed under the terms
-of the European Public License (EUPL), either version 1.2 or (at your option) any later 
+of the European Public License (EUPL), either version 1.2 or (at your option) any later
 version as soon as they are approved by the European Commission.
-Unless required by applicable law or agreed to in writing, software distributed under the 
-License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF 
-ANY KIND, either express or implied. See the License for the specific language governing 
+Unless required by applicable law or agreed to in writing, software distributed under the
+License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF
+ANY KIND, either express or implied. See the License for the specific language governing
 permissions and more details.
-You should have received a copy of the EUPL1.2 license along with this program; if not, 
+You should have received a copy of the EUPL1.2 license along with this program; if not,
 you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<artifactId>crawler</artifactId>
+    <artifactId>crawler</artifactId>
     <packaging>jar</packaging>
 
     <name>crawler</name>
@@ -25,11 +24,11 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
         <relativePath>../oaw/pom.xml</relativePath>
         <version>5.0.4</version>
     </parent>
-    
+
     <properties>
-		<oaw.version>5.0.4</oaw.version>
-	</properties>
-    
+        <oaw.version>5.0.4</oaw.version>
+    </properties>
+
 
     <build>
         <resources>
@@ -49,11 +48,21 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
             <artifactId>intav-core</artifactId>
             <version>${oaw.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-digester/commons-digester -->
         <dependency>
             <groupId>commons-digester</groupId>
             <artifactId>commons-digester</artifactId>
-            <version>1.8</version>
+            <version>2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -71,4 +80,4 @@ you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:3201
         </dependency>
     </dependencies>
 
-    </project>
+</project>
