--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -1,8 +1,8 @@
-<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified 
-	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later 
-	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing, 
-	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
-	either express or implied. See the License for the specific language governing permissions and more details. You should have 
+<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified
+	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later
+	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing,
+	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+	either express or implied. See the License for the specific language governing permissions and more details. You should have
 	received a copy of the EUPL1.2 license along with this program; if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -48,7 +48,7 @@
 					<include>tiles-defs.xml</include>
 				</includes>
 				<filtering>true</filtering>
-				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta 
+				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta
 					absoluta (usando la variable ${basedir}) -->
 				<targetPath>${basedir}/target/oaw/WEB-INF</targetPath>
 			</resource>
@@ -64,18 +64,18 @@
 				<includes>
 					<include>context.xml</include>
 				</includes>
-				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta 
+				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta
 					absoluta (usando la variable ${basedir}) -->
 				<targetPath>${basedir}/target/oaw/META-INF</targetPath>
 			</resource>
 		</resources>
-		<!-- <plugins> <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> <packagingExcludes>META-INF/context.xml</packagingExcludes> 
+		<!-- <plugins> <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> <packagingExcludes>META-INF/context.xml</packagingExcludes>
 			</configuration> </plugin> </plugins> -->
 
 	</build>
 
 	<dependencies>
-		
+
 		<!-- SERVLET API -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -83,7 +83,7 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
@@ -97,7 +97,7 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>es.minhap.oaw</groupId>
 			<artifactId>intav-core</artifactId>
@@ -119,9 +119,9 @@
 			<artifactId>itext</artifactId>
 			<version>2.1.4</version>
 		</dependency>
-		
-		
-		
+
+
+
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom</artifactId>
@@ -157,28 +157,13 @@
 			<artifactId>opencsv</artifactId>
 			<version>3.2</version>
 		</dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.2.6.ga</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-annotations</artifactId>
-			<version>3.4.0.GA</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-api</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.14.Final</version>
+        </dependency>
 
 		<!-- STRUTS -->
 		<!-- Es obligatorio añadir la dependencia a la versión 1.2.8 porque usa API que está eliminada en versiones posteriores -->
@@ -188,7 +173,7 @@
 			<version>1.2.8</version>
 		</dependency>
 
-		
+
 
 		<!-- Test -->
 		<dependency>
@@ -219,38 +204,39 @@
 			<version>4.10</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.8.11</version>
+			<version>2.10.3</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.8.11</version>
+			<version>2.10.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.11</version>
+			<version>2.10.3</version>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>1.2.1</version>
+			<version>1.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		
+
 
 	</dependencies>
 
