--- a/deployment/docker/Dockerfile
+++ b/deployment/docker/Dockerfile
@@ -16,3 +16,12 @@ FROM tomcat:7.0-jdk8-openjdk-slim
 
 COPY --from=MAVEN_TOOL_CHAIN /tmp/portal/target/oaw.war $CATALINA_HOME/webapps/oaw.war
 COPY deployment/docker/conf-context-oaw.xml $CATALINA_BASE/conf/Catalina/localhost/oaw.xml
+
+ENV CATALINA_OPTS="-Dorg.apache.tomcat.util.digester.PROPERTY_SOURCE=org.apache.tomcat.util.digester.EnvironmentPropertySource"
+
+ENV OAW_DB_NAME="oaw"
+ENV OAW_DB_HOST="mysql"
+ENV OAW_DB_PORT="3306"
+
+ENV OAW_DB_USER="root"
+ENV OAW_DB_PASS="root"
