--- a/deployment/docker/docker-compose.yml
+++ b/deployment/docker/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       dockerfile: testdb-dockerfile
     restart: always
     environment:
-      MYSQL_DATABASE: 'oaw'
+      #MYSQL_DATABASE: 'oaw'
       #MYSQL_USER: 'root'
       #MYSQL_PASSWORD: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
