Fix missing text propertie
Fix pdf 2012b section summary errors


Former-commit-id: 3b7e0f1d4d277593c0127cb484c3000a988a5fbd

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -2770,6 +2770,7 @@ resultados.primarios.puntuacion.pagina                           = Resumen Compa
 resultados.primarios.puntuaciones.verificacion1                  = Puntuaciones Medias por Verificaci\u00F3n. Prioridad 1.
 resultados.primarios.puntuaciones.verificacion2                  = Puntuaciones Medias por Verificaci\u00F3n. Prioridad 2.
 resultados.primarios.res.verificacion                            = Resultados por Verificaci\u00F3n
+resultados.primarios.res.verificacion.tabla.title                = Tabla de resultados por verificaci\u00F3n y p\u00E1gina. Nivel 
 
 salir.sesion.sistema.alt = CERRAR
 
