Fix verification 1.6 css generated content
Disable case sentive same directory check on crawler

Add count of pages on portal detail of analysis


Former-commit-id: 74feff2ae710d21968bab30b25c4cf5b8bf37b0b

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2575,8 +2575,8 @@ observatorio.puntuacion.nivel.1                                     = Puntuaci\u
 observatorio.puntuacion.nivel.2                                     = Puntuaci\u00F3n Media AA
 observatorio.puntuacion.nivel.a                                     = Puntuaci\u00F3n nivel de adecuaci\u00F3n A
 observatorio.puntuacion.nivel.aa                                    = Puntuaci\u00F3n nivel de adecuaci\u00F3n AA
-observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media Prioridad 1
-observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n Media Prioridad 2
+observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media A
+observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n Media AA
 observatorio.puntuacion.resultados.globales                         = Resultados globales
 observatorio.puntuacion.resultados.resumen                          = Resumen de resultados
 observatorio.puntuacion.total                                       = Puntuaci\u00F3n media del portal (PMP)
@@ -2942,6 +2942,7 @@ pdf.accessibility.line                                         = L\u00EDnea
 pdf.accessibility.main.problems                                = PRINCIPALES PROBLEMAS
 pdf.accessibility.message                                      = Mensaje
 pdf.accessibility.num.errors.summary                           = Se han mostrado {0} ejemplos de un total de {1}
+pdf.accessibility.on.demand                                    = Informe emitido bajo demanda
 pdf.accessibility.portal                                       = {0}\n{1}
 pdf.accessibility.priority.incidence                           = Incidencias Por Prioridad
 pdf.accessibility.problem                                      = Problema
@@ -3188,6 +3189,7 @@ resultados.observatorio.vista.primaria.puntuacion                = Puntuaci\u00F
 resultados.observatorio.vista.primaria.puntuacion.media          = Puntuaci\u00F3n media
 resultados.observatorio.vista.primaria.title                     = T\u00EDtulo
 resultados.observatorio.vista.primaria.url                       = URL
+resultados.observatorio.vista.primaria.urls.accesibilidad        = URL de accesibilidad
 resultados.observatorio.vista.primaria.vacio                     = No hay puntuaciones disponibles
 resultados.observatorio.vista.primaria.valor                     = Valor
 resultados.observatorio.vista.primaria.valor.cero                = 0
@@ -3238,6 +3240,7 @@ salir.sesion.sistema.alt = CERRAR
 search.results.analysis.error      = El an\u00E1lisis para esta p\u00E1gina ha fallado
 search.results.by.tracking         = P\u00E1ginas analizadas por el rastreo seleccionado
 search.results.by.tracking.malware = Resultados
+search.results.by.tracking.pages   = N\u00FAmero de p\u00E1ginas analizadas
 search.results.category            = Categor\u00EDa
 search.results.date                = Fecha del an\u00E1lisis
 search.results.domain              = Dominio
