Fix some hardcored text in Java files
Former-commit-id: d8e490104d3142efb32abcdfc27069776bacab98

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2563,10 +2563,12 @@ observatorio.nivel.cumplimiento.media.verificacion.pagina.title     = Puntuaci\u
 observatorio.nivel.cumplimiento.media.verificacion.title            = Puntuaci\u00F3n media de verificaci\u00F3n a nivel de sitio web
 observatorio.nivel.cumplimiento.media.verificacion.title.level1     = Puntuaciones medias de verificaciones. Nivel A
 observatorio.nivel.cumplimiento.media.verificacion.title.level2     = Puntuaciones medias de verificaciones. Nivel AA
+observatorio.nivel.cumplimiento.p1                                  = A continuaci\u00F3n se muestra la distribuci\u00F3n de p\u00E1ginas seg\u00FAn el nivel de adecuaci\u00F3n estimado (No v\u00E1lido, A o AA)
 observatorio.nivel.cumplimiento.p1.grafica                          = A continuaci\u00F3n se muestra la distribuci\u00F3n de p\u00E1ginas seg\u00FAn el nivel de adecuaci\u00F3n estimado (No v\u00E1lido, A o AA).
 observatorio.no.resultados                                          = El observatorio seleccionado no tiene resultados.
+observatorio.posicion.complejidad                                   = Posici\u00F3n en complejidad 
 observatorio.posicion.global                                        = Posici\u00F3n a nivel global
-observatorio.posicion.segmento                                      = Posici\u00F3n a nivel del segmento '{0}'
+observatorio.posicion.segmento                                      = Posici\u00F3n en 
 observatorio.puntuacion                                             = Puntuaci\u00F3n
 observatorio.puntuacion.media                                       = Puntuaci\u00F3n Media
 observatorio.puntuacion.media.nivel.analisis                        = Puntuaci\u00F3n Media del Nivel de An\u00E1lisis
@@ -2575,8 +2577,8 @@ observatorio.puntuacion.nivel.1                                     = Puntuaci\u
 observatorio.puntuacion.nivel.2                                     = Puntuaci\u00F3n Media AA
 observatorio.puntuacion.nivel.a                                     = Puntuaci\u00F3n nivel de adecuaci\u00F3n A
 observatorio.puntuacion.nivel.aa                                    = Puntuaci\u00F3n nivel de adecuaci\u00F3n AA
-observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n Media A
-observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n Media AA
+observatorio.puntuacion.prioridad.1                                 = Puntuaci\u00F3n A
+observatorio.puntuacion.prioridad.2                                 = Puntuaci\u00F3n AA
 observatorio.puntuacion.resultados.globales                         = Resultados globales
 observatorio.puntuacion.resultados.resumen                          = Resumen de resultados
 observatorio.puntuacion.total                                       = Puntuaci\u00F3n media del portal (PMP)
@@ -3213,6 +3215,7 @@ resultados.primarios.43.p2                                       = En el eje X d
 resultados.primarios.5.p1                                        = A continuaci\u00F3n se presenta el resultado de la aplicaci\u00F3n de las verificaciones que componen la metodolog\u00EDa del Observatorio sobre cada p\u00E1gina de la muestra. En las siguientes tablas se muestra para cada una de dichas comprobaciones, el resultado de Valor y Modalidad obtenido por cada p\u00E1gina analizada. 
 resultados.primarios.5.p2                                        = Por lo tanto, se puede ver de forma r\u00E1pida y visual en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero este no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que origina la modalidad "Falla".
 resultados.primarios.errores.mas.info                            = Para obtener la informaci\u00F3n detallada de los errores detectados y su localizaci\u00F3n exacta en el c\u00F3digo debe utilizar el "Servicio de Diagn\u00F3stico en l\u00EDnea" que se encuentra disponible desde la "Comunidad Accesibilidad" ([anchor1])
+resultados.primarios.evolucion                                   = Evoluci\u00F3n
 resultados.primarios.num.paginas                                 = N\u00FAmero de p\u00E1ginas 
 resultados.primarios.pagina                                      = La PMP refleja la cantidad de requisitos de accesibilidad que se satisfacen correctamente. El nivel de adecuaci\u00F3n tiene en consideraci\u00F3n las prioridades de los requisitos, por lo que fallos en requisitos de Aoriginan p\u00E1ginas con nivel de adecuaci\u00F3n No V\u00E1lido. Siempre se deber\u00E1n solucionar primero los problemas relacionados con verificaciones de Aque hayan ocasionado una modalidad "Falla".
 resultados.primarios.porc.paginas                                = Porcentaje de p\u00E1ginas
